Import of AMBS/XML-Writer-Simple-0.02 from CPAN.
gitpan-cpan-distribution: XML-Writer-Simple
gitpan-cpan-version:      0.02
gitpan-cpan-path:         AMBS/XML/XML-Writer-Simple-0.02.tar.gz
gitpan-cpan-author:       AMBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for XML-Writer-Simple
 
+0.02    2009, 6 February
+        - About three years after the first release, here comes a new
+          one with new features. Would love to know if someone is using
+          this module.
+        - added xml_header function. Optional argument encoding => '...'
+
 0.01    2006, 30 January
         First version with basic functionality
 
