--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for XML-Writer-Simple
 
+0.05    2009, 17 April
+		- Fixed bug with toxml that found a(0) to the <a/>
+		Thanks to TONNERRE for the bug report.
+
 0.04	2009, 16 February
 		- Added newlines at the end of start_tag and end_tag.
 		- Require a recent perl version (5.8.3 or higher);
