--- a/Changes
+++ b/Changes
@@ -1,15 +1,18 @@
 Revision history for XML-Writer-Simple
 
+0.06    2011, 11 April
+        - Added the ':html' tagset (still incomplete)
+
 0.05    2009, 17 April
-		- Fixed bug with toxml that found a(0) to the <a/>
-		Thanks to TONNERRE for the bug report.
+        - Fixed bug with toxml that found a(0) to the <a/>
+          Thanks to TONNERRE for the bug report.
 
 0.04	2009, 16 February
-		- Added newlines at the end of start_tag and end_tag.
-		- Require a recent perl version (5.8.3 or higher);
+        - Added newlines at the end of start_tag and end_tag.
+        - Require a recent perl version (5.8.3 or higher);
 
 0.03    2009, 9 February
-		- Added support to partial tags construction.
+        - Added support to partial tags construction.
 
 0.02    2009, 6 February
         - About three years after the first release, here comes a new
