--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML-Writer-Simple
 
+0.07    2011, 11 April
+        - Added the ':html' tagset (full set XHTML 1.1)
+
 0.06    2011, 11 April
         - Added the ':html' tagset (still incomplete)
 
