Import of AMBS/XML-Writer-Simple-0.08 from CPAN.
gitpan-cpan-distribution: XML-Writer-Simple
gitpan-cpan-version:      0.08
gitpan-cpan-path:         AMBS/XML/XML-Writer-Simple-0.08.tar.gz
gitpan-cpan-author:       AMBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML-Writer-Simple
 
+0.08    2012, 5 June
+        - POD fixes
+
 0.07    2011, 11 April
         - Added the ':html' tagset (full set XHTML 1.1)
 
