Import of AMBS/XML-Writer-Simple-0.09 from CPAN.
gitpan-cpan-distribution: XML-Writer-Simple
gitpan-cpan-version:      0.09
gitpan-cpan-path:         AMBS/XML/XML-Writer-Simple-0.09.tar.gz
gitpan-cpan-author:       AMBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for XML-Writer-Simple
 
+0.09    2014, 20 February
+        - Add the protect_entities function;
+        - Quote automatically quotes inside attributes;
+
 0.08    2012, 5 June
         - POD fixes
 
