--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for XML-Writer-Simple
 
+0.10    2014, 21 September
+        - Dzilification;
+        - Added metacpan metadata;
+
 0.09    2014, 20 February
         - Add the protect_entities function;
         - Quote automatically quotes inside attributes;
