Import of AMBS/XML-Writer-Simple-0.11 from CPAN.
gitpan-cpan-distribution: XML-Writer-Simple
gitpan-cpan-version:      0.11
gitpan-cpan-path:         AMBS/XML-Writer-Simple-0.11.tar.gz
gitpan-cpan-author:       AMBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML-Writer-Simple
 
+0.11    2014, 21 September
+        - Removed some extra files;
+
 0.10    2014, 21 September
         - Dzilification;
         - Added metacpan metadata;
