Import of AMBS/XML-Writer-Simple-0.12 from CPAN.
gitpan-cpan-distribution: XML-Writer-Simple
gitpan-cpan-version:      0.12
gitpan-cpan-path:         AMBS/XML-Writer-Simple-0.12.tar.gz
gitpan-cpan-author:       AMBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML-Writer-Simple
 
+0.12    2014, 22 September
+        - Fixed version issue;
+
 0.11    2014, 21 September
         - Removed some extra files;
 
